Began work on 'Meet the Team' page

--- a/css/index.css
+++ b/css/index.css
@@ -78,34 +78,40 @@ body {
     letter-spacing: .59rem;
     animation: moveInRight 0.7s ease-out;
     margin-top: 1rem; }
+  /* line 32, scss/base/_typography.scss */
+  .primary-header--solo {
+    display: block;
+    font-size: 8rem;
+    font-weight: 300;
+    letter-spacing: 3.3rem; }
 
-/* line 33, scss/base/_typography.scss */
+/* line 40, scss/base/_typography.scss */
 .secondary-header {
   display: inline-block;
   text-align: center;
   font-size: 3rem;
   padding: 2rem; }
-  /* line 39, scss/base/_typography.scss */
+  /* line 46, scss/base/_typography.scss */
   .secondary-header__text {
     display: inline-block;
     margin: 0 0 0 2rem;
     text-transform: uppercase;
     position: relative;
     bottom: 0.5rem; }
-  /* line 47, scss/base/_typography.scss */
+  /* line 54, scss/base/_typography.scss */
   .secondary-header__icon {
     display: inline-block;
     position: relative;
     top: 0.2rem;
     font-size: 4rem; }
 
-/* line 55, scss/base/_typography.scss */
+/* line 62, scss/base/_typography.scss */
 .main-heading {
   display: inline-block;
   margin: 1rem 1rem -6rem 1rem;
   vertical-align: top;
   text-transform: uppercase; }
-  /* line 61, scss/base/_typography.scss */
+  /* line 68, scss/base/_typography.scss */
   .main-heading__icon {
     display: inline-block;
     margin: 0 3rem 0 0rem;
@@ -115,7 +121,7 @@ body {
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent; }
-  /* line 72, scss/base/_typography.scss */
+  /* line 79, scss/base/_typography.scss */
   .main-heading__text {
     vertical-align: top;
     display: inline-block;
@@ -128,10 +134,10 @@ body {
     position: relative;
     top: 4.2rem; }
 
-/* line 86, scss/base/_typography.scss */
+/* line 93, scss/base/_typography.scss */
 .article-body {
-  width: 106rem; }
-  /* line 89, scss/base/_typography.scss */
+  width: 100%; }
+  /* line 96, scss/base/_typography.scss */
   .article-body__paragraph {
     font-size: 1.8rem;
     width: 52rem;
@@ -142,91 +148,69 @@ body {
   align-self: flex-end; }
 
 /* line 1, scss/layout/_header.scss */
-.home-header {
-  height: 40vh;
-  background-image: url(../assets/photographs/meet-the-team-no-text.jpg);
+.page-header {
   background-size: cover;
-  background-position: 0 -6rem;
   clip-path: polygon(0 0, 100% 0, 100% 65%, 0 100%); }
+  /* line 3, scss/layout/_header.scss */
+  .page-header__large {
+    background-image: url(../assets/photographs/meet-the-team-no-text.jpg);
+    height: 40vh;
+    background-position: 0 -6rem; }
   /* line 8, scss/layout/_header.scss */
-  .home-header__upper-triangle {
+  .page-header__small {
+    height: 16vh; }
+    /* line 9, scss/layout/_header.scss */
+    .page-header__small--green {
+      background-image: linear-gradient(#38ada9, #38ada9); }
+  /* line 16, scss/layout/_header.scss */
+  .page-header__upper-triangle {
     height: 100%;
     z-index: 1;
-    background-image: linear-gradient(to right bottom, rgba(235, 47, 6, 0.7), rgba(235, 47, 6, 0.7));
-    clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%);
-    z-index: 1; }
-  /* line 19, scss/layout/_header.scss */
-  .home-header__lower-triangle {
+    clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%); }
+    /* line 21, scss/layout/_header.scss */
+    .page-header__upper-triangle--red {
+      background-image: linear-gradient(to right bottom, rgba(235, 47, 6, 0.7), rgba(235, 47, 6, 0.7)); }
+    /* line 27, scss/layout/_header.scss */
+    .page-header__upper-triangle--green {
+      background-image: linear-gradient(to right bottom, rgba(56, 173, 169, 0.7), rgba(56, 173, 169, 0.7)); }
+  /* line 35, scss/layout/_header.scss */
+  .page-header__lower-triangle {
     height: 100%;
     z-index: 1;
-    background-image: linear-gradient(to right bottom, rgba(229, 26, 80, 0.7), rgba(229, 26, 80, 0.7));
     clip-path: polygon(0 100%, 100% 100%, 100% 0%, 0 100%);
     position: relative;
     bottom: 100%; }
-  /* line 32, scss/layout/_header.scss */
-  .home-header__text-box {
+    /* line 41, scss/layout/_header.scss */
+    .page-header__lower-triangle--red {
+      background-image: linear-gradient(to right bottom, rgba(183, 21, 64, 0.7), rgba(183, 21, 64, 0.7)); }
+    /* line 47, scss/layout/_header.scss */
+    .page-header__lower-triangle--green {
+      background-image: linear-gradient(to right bottom, rgba(7, 153, 146, 0.7), rgba(7, 153, 146, 0.7)); }
+  /* line 56, scss/layout/_header.scss */
+  .page-header__text-box {
     position: absolute;
-    top: 20%;
     left: 50%;
     width: 100%;
     transform: translate(-50%, -50%);
     text-align: center;
     z-index: 2; }
+    /* line 63, scss/layout/_header.scss */
+    .page-header__text-box--first-page {
+      top: 20%; }
+    /* line 66, scss/layout/_header.scss */
+    .page-header__text-box--second-page {
+      top: 11%; }
 
-/* line 3, scss/layout/_grid.scss */
-.row {
-  max-width: 90vw;
-  margin: 0 auto; }
-  /* line 2, scss/abstracts/_mixins.scss */
-  .row::after {
-    content: "";
-    clear: both;
-    display: table; }
+/* line 1, scss/layout/_grid.scss */
+.grid {
+  display: grid;
+  margin: 2rem auto; }
+  /* line 5, scss/layout/_grid.scss */
+  .grid--three-by-two {
+    grid-template: 60rem 60rem 60rem / 50% 50%; }
   /* line 9, scss/layout/_grid.scss */
-  .row:not(:last-child) {
-    margin-bottom: 4rem; }
-  /* line 13, scss/layout/_grid.scss */
-  .row .col-1-of-2 {
-    width: calc((100% - 6rem)/2);
-    float: left; }
-    /* line 18, scss/layout/_grid.scss */
-    .row .col-1-of-2:not(:last-child) {
-      margin-right: 6rem; }
-  /* line 23, scss/layout/_grid.scss */
-  .row .col-1-of-3 {
-    width: calc((100% - 2*6rem)/3);
-    float: left; }
-    /* line 27, scss/layout/_grid.scss */
-    .row .col-1-of-3:not(:last-child) {
-      margin-right: 6rem; }
-  /* line 32, scss/layout/_grid.scss */
-  .row .col-1-of-4 {
-    width: calc((100% - 3*6rem)/4);
-    float: left; }
-    /* line 36, scss/layout/_grid.scss */
-    .row .col-1-of-4:not(:last-child) {
-      margin-right: 6rem; }
-  /* line 41, scss/layout/_grid.scss */
-  .row .col-2-of-3 {
-    width: calc(2 * ((100% - 2*6rem)/3) + 6rem);
-    float: left; }
-    /* line 45, scss/layout/_grid.scss */
-    .row .col-2-of-3:not(:last-child) {
-      margin-right: 6rem; }
-  /* line 50, scss/layout/_grid.scss */
-  .row .col-2-of-4 {
-    width: calc(2 * ((100% - 3*6rem)/4) + 6rem);
-    float: left; }
-    /* line 54, scss/layout/_grid.scss */
-    .row .col-2-of-4:not(:last-child) {
-      margin-right: 6rem; }
-  /* line 59, scss/layout/_grid.scss */
-  .row .col-3-of-4 {
-    width: calc( 3 * ((100% - 3*6rem)/4) + 2 * 6rem);
-    float: left; }
-    /* line 63, scss/layout/_grid.scss */
-    .row .col-3-of-4:not(:last-child) {
-      margin-right: 6rem; }
+  .grid--fullpage {
+    width: 95vw; }
 
 /* line 3, scss/layout/_flex.scss */
 .flex-container--inline {
@@ -246,7 +230,7 @@ body {
   flex-direction: row; }
 
 /* line 20, scss/layout/_flex.scss */
-.flex-container--justify-between {
+.flex-container--space-between {
   justify-content: space-between; }
 
 /* line 1, scss/layout/_footer.scss */
@@ -254,8 +238,13 @@ body {
   margin: 1rem 0 0 0;
   height: 5rem;
   width: 100%;
-  background-color: #e55039;
   clip-path: polygon(0 60%, 100% 0%, 100% 98%, 0 100%); }
+  /* line 5, scss/layout/_footer.scss */
+  .bottom-border--red {
+    background-color: #e55039; }
+  /* line 8, scss/layout/_footer.scss */
+  .bottom-border--green {
+    background-color: #38ada9; }
 
 /* line 1, scss/layout/_hr.scss */
 .horizontal-hr {
@@ -298,6 +287,72 @@ body {
     list-style: none;
     padding: 0.7rem;
     font-size: 1.6rem; }
+
+/* line 1, scss/components/_main-article.scss */
+.main-article {
+  width: 77%; }
+
+/* line 1, scss/components/_grid-el.scss */
+.grid-el {
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover; }
+  /* line 7, scss/components/_grid-el.scss */
+  .grid-el__label {
+    display: block;
+    height: 12rem;
+    color: #b8e994;
+    font-size: 5rem;
+    position: relative;
+    top: 3rem; }
+    /* line 15, scss/components/_grid-el.scss */
+    .grid-el__label--left {
+      right: 15rem; }
+    /* line 19, scss/components/_grid-el.scss */
+    .grid-el__label--right {
+      left: 15rem; }
+    /* line 23, scss/components/_grid-el.scss */
+    .grid-el__label__upper-triangle {
+      height: 100%;
+      z-index: 1;
+      clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%); }
+      /* line 27, scss/components/_grid-el.scss */
+      .grid-el__label__upper-triangle--green {
+        background-image: linear-gradient(to right bottom, rgba(184, 233, 148, 0.7), rgba(184, 233, 148, 0.7)); }
+    /* line 35, scss/components/_grid-el.scss */
+    .grid-el__label__lower-triangle {
+      height: 100%;
+      z-index: 1;
+      clip-path: polygon(0 100%, 100% 100%, 100% 0%, 0 100%);
+      position: relative;
+      bottom: 100%; }
+      /* line 39, scss/components/_grid-el.scss */
+      .grid-el__label__lower-triangle--green {
+        background-image: linear-gradient(to right bottom, rgba(120, 224, 143, 0.7), rgba(120, 224, 143, 0.7)); }
+    /* line 49, scss/components/_grid-el.scss */
+    .grid-el__label__textbox {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 100%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      z-index: 3;
+      letter-spacing: 1.5rem;
+      background: linear-gradient(#38ada9, #079992);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent; }
+  /* line 65, scss/components/_grid-el.scss */
+  .grid-el--first {
+    background-image: url(../assets/photographs/david.png); }
+  /* line 69, scss/components/_grid-el.scss */
+  .grid-el--fourth {
+    background-image: url(../assets/photographs/christian.jpg); }
+  /* line 73, scss/components/_grid-el.scss */
+  .grid-el--fifth {
+    background-image: url(../assets/photographs/dan.jpg); }
 
 /* line 1, scss/pages/_page-one.scss */
 .page-one {
