--- a/scss/layout/_flex.scss
+++ b/scss/layout/_flex.scss
@@ -17,7 +17,8 @@
         flex-direction: row;
     }
 
-    &--justify-between {
+    &--space-between {
         justify-content: space-between;
     }
 }
+//
