--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,9 @@
 
 @import "components/_round-portrait.scss";
 @import "components/_aside.scss";
+@import "components/_main-article";
+@import "components/_grid-el";
 
 @import "pages/_page-one.scss";
 
-///////////////////////////////////////////
+//////////////////////////////////////////
