--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -28,6 +28,13 @@ body {
         animation: moveInRight 0.7s ease-out;
         margin-top: 1rem;
     }
+
+    &--solo {
+        display: block;
+        font-size: 8rem;
+        font-weight: 300;
+        letter-spacing: 3.3rem;
+    }
 }
 
 .secondary-header {
@@ -84,7 +91,7 @@ body {
 }
 
 .article-body {
-    width: 106rem;
+    width: 100%;
 
     &__paragraph {
         font-size: 1.8rem;
@@ -92,3 +99,4 @@ body {
         margin: 1rem;
     }
 }
+//
