--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,6 +2,11 @@
     margin: 1rem 0 0 0;
     height: 5rem;
     width: 100%;
-    background-color: $red;
+    &--red {
+        background-color: $red;
+    };
+    &--green {
+        background-color: $dark-green;
+    };
     clip-path: polygon(0 60%, 100% 0%, 100% 98%, 0 100%);
-}
+}//
