--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -1,71 +1,12 @@
+.grid {
+    display: grid;
+    margin: 2rem auto;
 
-
-.row {
-    max-width: $row-width;
-    margin: 0 auto;
-    @include clearfix;
-
-
-    &:not(:last-child){
-        margin-bottom: $gutter-vertical;
+    &--three-by-two {
+        grid-template: 60rem 60rem 60rem / 50% 50%;
     }
 
-    .col-1-of-2 {
-        
-        width: calc((100% - #{$gutter-horizontal})/2);
-        float: left;
-
-        &:not(:last-child){
-            margin-right: $gutter-horizontal;
-        }
-    }
-
-    .col-1-of-3 {
-        width: calc((100% - 2*#{$gutter-horizontal})/3);
-        float: left;
-
-        &:not(:last-child){
-            margin-right: $gutter-horizontal;
-        }
-    }
-
-    .col-1-of-4 {
-        width: calc((100% - 3*#{$gutter-horizontal})/4);
-        float: left;
-
-        &:not(:last-child){
-            margin-right: $gutter-horizontal;
-        }
-    }
-
-    .col-2-of-3 {
-        width: calc(2 * ((100% - 2*#{$gutter-horizontal})/3) + #{$gutter-horizontal});
-        float: left;
-
-        &:not(:last-child){
-            margin-right: $gutter-horizontal;
-        }
-    }
-
-    .col-2-of-4 {
-        width: calc(2 * ((100% - 3*#{$gutter-horizontal})/4) + #{$gutter-horizontal});
-        float: left;
-
-        &:not(:last-child){
-            margin-right: $gutter-horizontal;
-        }
-    }
-
-    .col-3-of-4 {
-        width: calc( 3 * ((100% - 3*#{$gutter-horizontal})/4) + 2 * #{$gutter-horizontal});
-        float: left;
-
-        &:not(:last-child){
-            margin-right: $gutter-horizontal;
-        }
+    &--fullpage {
+        width: 95vw;
     }
 }
-
-
-
-// //
