--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i|Open+Sans:300,300i,400,600i,700,700i,800,800i");
+@import url("https://fonts.googleapis.com/css?family=Adamina|Source+Code+Pro");
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -52,25 +53,25 @@ body {
 #home-header__left-button {
   margin-right: 8rem; }
 
-/* line 3, scss/base/_typography.scss */
+/* line 4, scss/base/_typography.scss */
 body {
   font-family: 'Open Sans', sans-serif;
   line-height: 1.7; }
 
-/* line 9, scss/base/_typography.scss */
+/* line 10, scss/base/_typography.scss */
 .primary-header {
   color: #FDFDFD;
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 4rem; }
-  /* line 15, scss/base/_typography.scss */
+  /* line 16, scss/base/_typography.scss */
   .primary-header--main {
     display: block;
     font-size: 7rem;
     font-weight: 300;
     letter-spacing: 1.3rem;
     animation: moveInLeft 0.7s ease-out; }
-  /* line 23, scss/base/_typography.scss */
+  /* line 24, scss/base/_typography.scss */
   .primary-header--sub {
     display: block;
     font-size: 2.86rem;
@@ -78,40 +79,40 @@ body {
     letter-spacing: .59rem;
     animation: moveInRight 0.7s ease-out;
     margin-top: 1rem; }
-  /* line 32, scss/base/_typography.scss */
+  /* line 33, scss/base/_typography.scss */
   .primary-header--solo {
     display: block;
     font-size: 8rem;
     font-weight: 300;
     letter-spacing: 3.3rem; }
 
-/* line 40, scss/base/_typography.scss */
+/* line 41, scss/base/_typography.scss */
 .secondary-header {
   display: inline-block;
   text-align: center;
   font-size: 3rem;
   padding: 2rem; }
-  /* line 46, scss/base/_typography.scss */
+  /* line 47, scss/base/_typography.scss */
   .secondary-header__text {
     display: inline-block;
     margin: 0 0 0 2rem;
     text-transform: uppercase;
     position: relative;
     bottom: 0.5rem; }
-  /* line 54, scss/base/_typography.scss */
+  /* line 55, scss/base/_typography.scss */
   .secondary-header__icon {
     display: inline-block;
     position: relative;
     top: 0.2rem;
     font-size: 4rem; }
 
-/* line 62, scss/base/_typography.scss */
+/* line 63, scss/base/_typography.scss */
 .main-heading {
   display: inline-block;
   margin: 1rem 1rem -6rem 1rem;
   vertical-align: top;
   text-transform: uppercase; }
-  /* line 68, scss/base/_typography.scss */
+  /* line 69, scss/base/_typography.scss */
   .main-heading__icon {
     display: inline-block;
     margin: 0 3rem 0 0rem;
@@ -121,7 +122,7 @@ body {
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent; }
-  /* line 79, scss/base/_typography.scss */
+  /* line 80, scss/base/_typography.scss */
   .main-heading__text {
     vertical-align: top;
     display: inline-block;
@@ -134,10 +135,10 @@ body {
     position: relative;
     top: 4.2rem; }
 
-/* line 93, scss/base/_typography.scss */
+/* line 94, scss/base/_typography.scss */
 .article-body {
   width: 100%; }
-  /* line 96, scss/base/_typography.scss */
+  /* line 97, scss/base/_typography.scss */
   .article-body__paragraph {
     font-size: 1.8rem;
     width: 52rem;
@@ -158,7 +159,7 @@ body {
     background-position: 0 -6rem; }
   /* line 8, scss/layout/_header.scss */
   .page-header__small {
-    height: 16vh; }
+    height: 17vh; }
     /* line 9, scss/layout/_header.scss */
     .page-header__small--green {
       background-image: linear-gradient(#38ada9, #38ada9); }
@@ -258,6 +259,19 @@ body {
   .horizontal-hr--thick {
     border-top: white solid 3px; }
 
+/* line 1, scss/layout/_background.scss */
+.background {
+  position: absolute;
+  z-index: -1;
+  height: 180rem;
+  width: 95.1vw;
+  top: 20.2rem;
+  left: 4rem;
+  border: solid #e2f6d3 1px; }
+  /* line 9, scss/layout/_background.scss */
+  .background--gray {
+    background-color: #f4fdf6; }
+
 /* line 1, scss/components/_round-portrait.scss */
 [class*="round-portrait"] {
   display: inline-block;
@@ -300,37 +314,38 @@ body {
   background-size: cover; }
   /* line 7, scss/components/_grid-el.scss */
   .grid-el__label {
+    font-family: 'Adamina', serif;
     display: block;
     height: 12rem;
     color: #b8e994;
-    font-size: 5rem;
+    font-size: 4.1rem;
     position: relative;
     top: 3rem; }
-    /* line 15, scss/components/_grid-el.scss */
+    /* line 16, scss/components/_grid-el.scss */
     .grid-el__label--left {
       right: 15rem; }
-    /* line 19, scss/components/_grid-el.scss */
+    /* line 20, scss/components/_grid-el.scss */
     .grid-el__label--right {
       left: 15rem; }
-    /* line 23, scss/components/_grid-el.scss */
+    /* line 24, scss/components/_grid-el.scss */
     .grid-el__label__upper-triangle {
       height: 100%;
       z-index: 1;
       clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%); }
-      /* line 27, scss/components/_grid-el.scss */
+      /* line 28, scss/components/_grid-el.scss */
       .grid-el__label__upper-triangle--green {
         background-image: linear-gradient(to right bottom, rgba(184, 233, 148, 0.7), rgba(184, 233, 148, 0.7)); }
-    /* line 35, scss/components/_grid-el.scss */
+    /* line 36, scss/components/_grid-el.scss */
     .grid-el__label__lower-triangle {
       height: 100%;
       z-index: 1;
       clip-path: polygon(0 100%, 100% 100%, 100% 0%, 0 100%);
       position: relative;
       bottom: 100%; }
-      /* line 39, scss/components/_grid-el.scss */
+      /* line 40, scss/components/_grid-el.scss */
       .grid-el__label__lower-triangle--green {
         background-image: linear-gradient(to right bottom, rgba(120, 224, 143, 0.7), rgba(120, 224, 143, 0.7)); }
-    /* line 49, scss/components/_grid-el.scss */
+    /* line 50, scss/components/_grid-el.scss */
     .grid-el__label__textbox {
       position: absolute;
       left: 50%;
@@ -344,15 +359,42 @@ body {
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent; }
-  /* line 65, scss/components/_grid-el.scss */
-  .grid-el--first {
-    background-image: url(../assets/photographs/david.png); }
-  /* line 69, scss/components/_grid-el.scss */
-  .grid-el--fourth {
-    background-image: url(../assets/photographs/christian.jpg); }
-  /* line 73, scss/components/_grid-el.scss */
-  .grid-el--fifth {
+  /* line 66, scss/components/_grid-el.scss */
+  .grid-el__text {
+    font-size: 2.3rem;
+    margin: 8rem 3rem;
+    color: #056863; }
+  /* line 72, scss/components/_grid-el.scss */
+  .grid-el--david {
+    background-image: url(../assets/photographs/david.png);
+    background-position: 0rem -8rem; }
+  /* line 77, scss/components/_grid-el.scss */
+  .grid-el--chance {
+    background-image: url(../assets/photographs/christian.jpg);
+    background-position: 0rem -13rem; }
+  /* line 82, scss/components/_grid-el.scss */
+  .grid-el--dan {
     background-image: url(../assets/photographs/dan.jpg); }
+  /* line 86, scss/components/_grid-el.scss */
+  .grid-el--kayla {
+    background-image: url(../assets/photographs/kayla.png); }
+  /* line 90, scss/components/_grid-el.scss */
+  .grid-el--thomas {
+    background-image: url(../assets/photographs/thomas.png); }
+  /* line 94, scss/components/_grid-el.scss */
+  .grid-el--greg {
+    background-image: url(../assets/photographs/greg.jpg); }
+  /* line 98, scss/components/_grid-el.scss */
+  .grid-el--matt {
+    background-image: url(../assets/photographs/Matt.png);
+    background-position: 0 -29rem; }
+  /* line 103, scss/components/_grid-el.scss */
+  .grid-el--angela {
+    background-image: url(../assets/photographs/angela.png); }
+  /* line 107, scss/components/_grid-el.scss */
+  .grid-el--cokie {
+    background-image: url(../assets/photographs/cokie.jpg);
+    background-position: 0 -18rem; }
 
 /* line 1, scss/pages/_page-one.scss */
 .page-one {
