--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i|Open+Sans:300,300i,400,600i,700,700i,800,800i');
+@import url('https://fonts.googleapis.com/css?family=Adamina|Source+Code+Pro');
 
 body {
     font-family: 'Open Sans', sans-serif;
