--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 @import "layout/_flex.scss";
 @import "layout/_footer.scss";
 @import "layout/_hr.scss";
+@import "layout/background";
 
 @import "components/_round-portrait.scss";
 @import "components/_aside.scss";
@@ -20,4 +21,3 @@
 
 @import "pages/_page-one.scss";
 
-//////////////////////////////////////////
