--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -96,8 +96,8 @@ body {
 
     &__paragraph {
         font-size: 1.8rem;
-        width: 52rem;
+        width: 70rem;
         margin: 1rem;
     }
 }
-//
+///
