--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,9 +1,10 @@
 .page-header {
     background-size: cover;
+    clip-path: polygon(0 25rem, 75rem 0rem, 100% 0, 100% 35%, 0 100%);
     &__large {
-        background-image: url(../assets/photographs/meet-the-team-no-text.jpg);    
-        height: 40vh;
-        background-position: 0 -6rem;
+        background-image: url(../assets/photographs/meet-the-team-no-text.jpg);
+        height: 120vh;
+        background-position: -58rem -6rem;
     };
     &__small {
         &--green {
@@ -11,7 +12,6 @@
         }
         height: 17vh;
     }
-    clip-path: polygon(0 0, 100% 0, 100% 65%, 0 100%);
 
     &__upper-triangle{
         height: 100%;
@@ -31,6 +31,7 @@
             rgba($dark-green, 0.7));
         };
     }
+    //
 
     &__lower-triangle{
         height: 100%;
