--- a/css/index.css
+++ b/css/index.css
@@ -86,55 +86,6 @@ body {
     font-weight: 300;
     letter-spacing: 3.3rem; }
 
-/* line 41, scss/base/_typography.scss */
-.secondary-header {
-  display: inline-block;
-  text-align: center;
-  font-size: 3rem;
-  padding: 2rem; }
-  /* line 47, scss/base/_typography.scss */
-  .secondary-header__text {
-    display: inline-block;
-    margin: 0 0 0 2rem;
-    text-transform: uppercase;
-    position: relative;
-    bottom: 0.5rem; }
-  /* line 55, scss/base/_typography.scss */
-  .secondary-header__icon {
-    display: inline-block;
-    position: relative;
-    top: 0.2rem;
-    font-size: 4rem; }
-
-/* line 63, scss/base/_typography.scss */
-.main-heading {
-  display: inline-block;
-  margin: 1rem 1rem -6rem 1rem;
-  vertical-align: top;
-  text-transform: uppercase; }
-  /* line 69, scss/base/_typography.scss */
-  .main-heading__icon {
-    display: inline-block;
-    margin: 0 3rem 0 0rem;
-    vertical-align: top;
-    font-size: 12rem;
-    background: linear-gradient(#e55039, #b71540);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent; }
-  /* line 80, scss/base/_typography.scss */
-  .main-heading__text {
-    vertical-align: top;
-    display: inline-block;
-    font-size: 3.8rem;
-    letter-spacing: 1rem;
-    background: linear-gradient(#e55039, #b71540);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    position: relative;
-    top: 4.2rem; }
-
 /* line 94, scss/base/_typography.scss */
 .article-body {
   width: 100%; }
@@ -144,50 +95,67 @@ body {
     width: 70rem;
     margin: 1rem; }
 
+/* line 104, scss/base/_typography.scss */
+.rect-title {
+  text-align: center; }
+  /* line 107, scss/base/_typography.scss */
+  .rect-title__home-title {
+    width: 52vw;
+    background: linear-gradient(to right, #ce1848, #a01238);
+    color: #FDFDFD;
+    position: relative;
+    top: -108rem;
+    left: 8rem;
+    font-size: 9rem;
+    letter-spacing: 4.3rem;
+    padding: 0 0 0 2rem;
+    border: solid 1px #5c0b20; }
+
 /* line 2, scss/base/_utilities.scss */
 .u-flex-align--end {
   align-self: flex-end; }
 
 /* line 1, scss/layout/_header.scss */
 .page-header {
-  background-size: cover;
-  clip-path: polygon(0 25rem, 75rem 0rem, 100% 0, 100% 35%, 0 100%); }
-  /* line 4, scss/layout/_header.scss */
+  background-size: cover; }
+  /* line 3, scss/layout/_header.scss */
   .page-header__large {
+    clip-path: polygon(0 25rem, 75rem 0rem, 100% 0, 100% 35%, 0 100%);
     background-image: url(../assets/photographs/meet-the-team-no-text.jpg);
     height: 120vh;
     background-position: -58rem -6rem; }
   /* line 9, scss/layout/_header.scss */
   .page-header__small {
+    clip-path: polygon(0 0, 100% 0, 100% 65%, 0 100%);
     height: 17vh; }
-    /* line 10, scss/layout/_header.scss */
+    /* line 11, scss/layout/_header.scss */
     .page-header__small--green {
       background-image: linear-gradient(#38ada9, #38ada9); }
-  /* line 16, scss/layout/_header.scss */
+  /* line 17, scss/layout/_header.scss */
   .page-header__upper-triangle {
     height: 100%;
     z-index: 1;
     clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%); }
-    /* line 21, scss/layout/_header.scss */
+    /* line 22, scss/layout/_header.scss */
     .page-header__upper-triangle--red {
       background-image: linear-gradient(to right bottom, rgba(235, 47, 6, 0.7), rgba(235, 47, 6, 0.7)); }
-    /* line 27, scss/layout/_header.scss */
+    /* line 28, scss/layout/_header.scss */
     .page-header__upper-triangle--green {
       background-image: linear-gradient(to right bottom, rgba(56, 173, 169, 0.7), rgba(56, 173, 169, 0.7)); }
-  /* line 36, scss/layout/_header.scss */
+  /* line 37, scss/layout/_header.scss */
   .page-header__lower-triangle {
     height: 100%;
     z-index: 1;
     clip-path: polygon(0 100%, 100% 100%, 100% 0%, 0 100%);
     position: relative;
     bottom: 100%; }
-    /* line 42, scss/layout/_header.scss */
+    /* line 43, scss/layout/_header.scss */
     .page-header__lower-triangle--red {
       background-image: linear-gradient(to right bottom, rgba(183, 21, 64, 0.7), rgba(183, 21, 64, 0.7)); }
-    /* line 48, scss/layout/_header.scss */
+    /* line 49, scss/layout/_header.scss */
     .page-header__lower-triangle--green {
       background-image: linear-gradient(to right bottom, rgba(7, 153, 146, 0.7), rgba(7, 153, 146, 0.7)); }
-  /* line 57, scss/layout/_header.scss */
+  /* line 58, scss/layout/_header.scss */
   .page-header__text-box {
     position: absolute;
     left: 50%;
@@ -195,10 +163,10 @@ body {
     transform: translate(-50%, -50%);
     text-align: center;
     z-index: 2; }
-    /* line 64, scss/layout/_header.scss */
+    /* line 65, scss/layout/_header.scss */
     .page-header__text-box--first-page {
       top: 20%; }
-    /* line 67, scss/layout/_header.scss */
+    /* line 68, scss/layout/_header.scss */
     .page-header__text-box--second-page {
       top: 11%; }
 
