--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -38,58 +38,58 @@ body {
     }
 }
 
-.secondary-header {
-    display: inline-block;
-    text-align: center;
-    font-size: 3rem;
-    padding: 2rem;
+// .secondary-header {
+//     display: inline-block;
+//     text-align: center;
+//     font-size: 3rem;
+//     padding: 2rem;
 
-    &__text {
-        display: inline-block;
-        margin: 0 0 0 2rem;
-        text-transform: uppercase;
-        position: relative;
-        bottom: 0.5rem;
-    }
+//     &__text {
+//         display: inline-block;
+//         margin: 0 0 0 2rem;
+//         text-transform: uppercase;
+//         position: relative;
+//         bottom: 0.5rem;
+//     }
 
-    &__icon {
-        display: inline-block;
-        position: relative;
-        top: 0.2rem;
-        font-size: 4rem;
-    }
-}
+//     &__icon {
+//         display: inline-block;
+//         position: relative;
+//         top: 0.2rem;
+//         font-size: 4rem;
+//     }
+// }
 
-.main-heading {
-    display: inline-block;
-    margin: 1rem 1rem -6rem 1rem;
-    vertical-align: top;
-    text-transform: uppercase;
+// .main-heading {
+//     display: inline-block;
+//     margin: 1rem 1rem -6rem 1rem;
+//     vertical-align: top;
+//     text-transform: uppercase;
     
-    &__icon {
-        display: inline-block;
-        margin: 0 3rem 0 0rem;
-        vertical-align: top;
-        font-size: 12rem;
-        background: linear-gradient(#e55039, #b71540);
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-    }
+//     &__icon {
+//         display: inline-block;
+//         margin: 0 3rem 0 0rem;
+//         vertical-align: top;
+//         font-size: 12rem;
+//         background: linear-gradient(#e55039, #b71540);
+//         -webkit-background-clip: text;
+//         background-clip: text;
+//         color: transparent;
+//     }
 
-    &__text {
-        vertical-align: top;
-        display: inline-block;
-        font-size: 3.8rem;
-        letter-spacing: 1rem;
-        background: linear-gradient(#e55039, #b71540);
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-        position: relative;
-        top: 4.2rem;
-    }
-}
+//     &__text {
+//         vertical-align: top;
+//         display: inline-block;
+//         font-size: 3.8rem;
+//         letter-spacing: 1rem;
+//         background: linear-gradient(#e55039, #b71540);
+//         -webkit-background-clip: text;
+//         background-clip: text;
+//         color: transparent;
+//         position: relative;
+//         top: 4.2rem;
+//     }
+// }/
 
 .article-body {
     width: 100%;
@@ -98,6 +98,23 @@ body {
         font-size: 1.8rem;
         width: 70rem;
         margin: 1rem;
+    }
+}
+
+.rect-title {
+    text-align: center;
+    
+    &__home-title {
+        width: 52vw;
+        background: linear-gradient(to right, lighten($soaked-red, 5%), darken($soaked-red, 5%));
+        color: #FDFDFD;
+        position: relative;
+        top: -108rem;
+        left: 8rem;
+        font-size: 9rem;
+        letter-spacing: 4.3rem;
+        padding: 0 0 0 2rem;
+        border: solid 1px darken($soaked-red, 20%);
     }
 }
 ///
