--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -103,18 +103,37 @@ body {
 
 .rect-title {
     text-align: center;
+
+    &__subheading {
+        
+        &--text {
+            color: $white;
+            font-size: 2em;
+            font-weight: bold;
+            display: inline-block;
+            margin: 0 0 0 1rem;
+            letter-spacing: 0.82rem;
+        }
+
+        &--img {
+            vertical-align: middle;
+            display: inline-block;
+            max-height: 3.5rem
+        }
+    }
+
+    &__superheading{
+        font-size: 1.5rem;
+        margin: -1.5rem 0 0.25rem 0.25rem; 
+    }
     
     &__home-title {
-        width: 52vw;
-        background: linear-gradient(to right, lighten($soaked-red, 5%), darken($soaked-red, 5%));
+        min-width: 72vw;
+        background: linear-gradient(to right, lighten($dark-red, 5%), darken($dark-red, 5%));
         color: #FDFDFD;
-        position: relative;
-        top: -108rem;
-        left: 8rem;
-        font-size: 9rem;
-        letter-spacing: 4.3rem;
+        font-size: 7vw;
+        letter-spacing: 2.0rem;
         padding: 0 0 0 2rem;
-        border: solid 1px darken($soaked-red, 20%);
     }
 }
 ///
